--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+/* HEADER  */
+
+/* MY TASK  */
+
+/* PROJECTS  */
 .projects-section {
     padding: 120px 0;
     background-image: url(./img/projects-bg.png);
@@ -82,3 +87,7 @@
     color: white;
     text-decoration: none;
 }
+
+/* REVIEWS */
+
+/* FOOTER */
