--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
 /* HEADER  */
 
 /* MY TASK  */
@@ -208,4 +217,5 @@ body {
 
 
 /* FOOTER */
+
 
