--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     background-repeat: no-repeat;
 }
 
-.projects-container {
+.container {
     width: 1200px;
     margin: 0 auto;
 }
@@ -217,5 +217,6 @@ body {
 
 
 /* FOOTER */
+
 
 
