Refactor styles.css for improved organization

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     margin: 0 auto;
 }
 
-.projects-title {
+.title {
     font-size: 64px;
     font-weight: 800;
     color: #E4CFCF;
@@ -217,6 +217,7 @@ body {
 
 
 /* FOOTER */
+
 
 
 
